src/components/rich-text-edit/adapter/vue-froala.scss
.vue-froala {
    &--collapsed {
        // Style overrides when the editor is not focused when there is nothing to display.
        /deep/ .fr-box.fr-basic .fr-element {
            padding: 0;
            min-height: unset;

            p { margin: 0; }
        }

        /deep/ .fr-box.fr-basic.fr-top .fr-wrapper {
            box-shadow: unset;
        }

        /deep/ .fr-wrapper.show-placeholder .fr-placeholder { display: none; }

        // Allow popups to appear over modals.
        /deep/ .fr-popup .fr-desktop .fr-active { z-index: 103; }
    }
}

